Changed to EE3 and removed IC2 + a few updates

--- a/client/config/AppliedEnergistics2/Facades.cfg
+++ b/client/config/AppliedEnergistics2/Facades.cfg
@@ -1,5 +1,41 @@
 # Configuration file
 
+additionalpipes {
+    B:chunkLoader=false
+}
+
+
+advgenerators {
+    B:Control=false
+    B:EfficiencyUpgradeTier1=false
+    B:EfficiencyUpgradeTier2=false
+    B:FluidInput=false
+    B:FluidOutputSelect=false
+    B:FuelTank=false
+    B:HeatExchanger=false
+    B:HeatExchangerController=false
+    B:HeatingChamber=false
+    B:ItemInput=false
+    B:ItemOutput=false
+    B:MixingChamber=false
+    B:PowerCapacitorAdvanced=false
+    B:PowerCapacitorDense=false
+    B:PowerCapacitorRedstone=false
+    B:RFOutput=false
+    B:Sensor=false
+    B:SteamTurbineController=false
+    B:SyngasController=false
+    B:TurbineBronze=false
+    B:TurbineController=false
+    B:TurbineEnderium=false
+    B:TurbineGold=false
+    B:TurbineIron=false
+    B:TurbineSteel=false
+    B:TurbineVibrant=false
+    B:syngas=false
+}
+
+
 ae2stuff {
     B:Encoder=false
     B:Grower=false
@@ -1530,13 +1566,6 @@ chisel {
 }
 
 
-compactsolars {
-    B:CompactSolarBlock=false
-    B:CompactSolarBlock.1=false
-    B:CompactSolarBlock.2=false
-}
-
-
 computercraft {
     B:CCCable=false
     B:CCComputer=false
@@ -1664,10 +1693,8 @@ forestry {
     B:candle=false
     B:core=false
     B:core.1=false
-    B:engine=false
     B:engine.1=false
     B:engine.2=false
-    B:engine.3=false
     B:engine.4=false
     B:factory=false
     B:factory.1=false
@@ -1721,132 +1748,113 @@ forestry {
 }
 
 
-ic2 {
-    B:blockAlloy=true
-    B:blockAlloyGlass=false
-    B:blockBarrel=false
-    B:blockBasalt=true
-    B:blockChargepad=false
-    B:blockChargepad.1=false
-    B:blockChargepad.2=false
-    B:blockChargepad.3=false
-    B:blockCrop=false
-    B:blockDoorAlloy=false
-    B:blockDynamite=false
-    B:blockDynamiteRemote=false
-    B:blockElectric=false
-    B:blockElectric.1=false
-    B:blockElectric.2=false
-    B:blockElectric.3=false
-    B:blockElectric.4=false
-    B:blockElectric.5=false
-    B:blockElectric.6=false
-    B:blockElectric.7=false
-    B:blockFenceIron=false
-    B:blockFoam=false
-    B:blockGenerator=false
-    B:blockGenerator.1=false
-    B:blockGenerator.2=false
-    B:blockGenerator.3=false
-    B:blockGenerator.4=false
-    B:blockGenerator.5=false
-    B:blockGenerator.6=false
-    B:blockGenerator.7=false
-    B:blockGenerator.8=false
-    B:blockGenerator.9=false
-    B:blockHarz=false
-    B:blockHeatGenerator=false
-    B:blockHeatGenerator.1=false
-    B:blockHeatGenerator.2=false
-    B:blockHeatGenerator.3=false
-    B:blockITNT=true
-    B:blockIronScaffold=false
-    B:blockKineticGenerator=false
-    B:blockKineticGenerator.1=false
-    B:blockKineticGenerator.2=false
-    B:blockKineticGenerator.3=false
-    B:blockKineticGenerator.4=false
-    B:blockKineticGenerator.5=false
-    B:blockLuminatorDark=false
-    B:blockMachine=false
-    B:blockMachine.1=false
-    B:blockMachine.10=false
-    B:blockMachine.11=false
-    B:blockMachine.12=false
-    B:blockMachine.13=false
-    B:blockMachine.14=false
-    B:blockMachine.15=false
-    B:blockMachine.2=false
-    B:blockMachine.3=false
-    B:blockMachine.4=false
-    B:blockMachine.5=false
-    B:blockMachine.6=false
-    B:blockMachine.7=false
-    B:blockMachine.8=false
-    B:blockMachine.9=false
-    B:blockMachine2=false
-    B:blockMachine2.1=false
-    B:blockMachine2.10=false
-    B:blockMachine2.11=false
-    B:blockMachine2.12=false
-    B:blockMachine2.13=false
-    B:blockMachine2.14=false
-    B:blockMachine2.15=false
-    B:blockMachine2.2=false
-    B:blockMachine2.3=false
-    B:blockMachine2.4=false
-    B:blockMachine2.5=false
-    B:blockMachine2.6=false
-    B:blockMachine2.7=false
-    B:blockMachine2.8=false
-    B:blockMachine2.9=false
-    B:blockMachine3=false
-    B:blockMachine3.1=false
-    B:blockMachine3.2=false
-    B:blockMachine3.3=false
-    B:blockMachine3.4=false
-    B:blockMachine3.5=false
-    B:blockMachine3.6=false
-    B:blockMachine3.7=false
-    B:blockMachine3.8=false
-    B:blockMetal=true
-    B:blockMetal.1=true
-    B:blockMetal.2=true
-    B:blockMetal.3=true
-    B:blockMetal.4=true
-    B:blockMetal.5=true
-    B:blockMiningPipe=false
-    B:blockNuke=false
-    B:blockOreCopper=true
-    B:blockOreLead=true
-    B:blockOreTin=true
-    B:blockOreUran=true
-    B:blockPersonal=false
-    B:blockPersonal.1=false
-    B:blockPersonal.2=false
-    B:blockReactorAccessHatch=false
-    B:blockReactorChamber=false
-    B:blockReactorFluidPort=false
-    B:blockReactorRedstonePort=false
-    B:blockReinforcedFoam=false
-    B:blockRubLeaves.4=false
-    B:blockRubSapling=false
-    B:blockRubWood=false
-    B:blockRubber=false
-    B:blockScaffold=false
-    B:blockWall=false
-    B:blockreactorvessel=false
-    B:fluidBiogas=false
-    B:fluidBiomass=false
-    B:fluidConstructionFoam=false
-    B:fluidCoolant=false
-    B:fluidDistilledWater=false
-    B:fluidHotCoolant=false
-    B:fluidHotWater=false
-    B:fluidPahoehoeLava=false
-    B:fluidSteam=false
-    B:fluidSuperheatedSteam=false
-    B:fluidUuMatter=false
+immersiveengineering {
+    B:clothDevice=false
+    B:concreteStairs=false
+    B:concreteTileStairs=false
+    B:hemp=false
+    B:metalDecoration=false
+    B:metalDecoration.1=false
+    B:metalDecoration.10=false
+    B:metalDecoration.11=false
+    B:metalDecoration.12=false
+    B:metalDecoration.13=false
+    B:metalDecoration.14=false
+    B:metalDecoration.15=false
+    B:metalDecoration.2=false
+    B:metalDecoration.3=false
+    B:metalDecoration.4=false
+    B:metalDecoration.5=false
+    B:metalDecoration.6=false
+    B:metalDecoration.7=false
+    B:metalDecoration.8=false
+    B:metalDecoration.9=false
+    B:metalDecoration2=false
+    B:metalDecoration2.1=false
+    B:metalDecoration2.2=false
+    B:metalDevice=false
+    B:metalDevice.1=false
+    B:metalDevice.10=false
+    B:metalDevice.11=false
+    B:metalDevice.12=false
+    B:metalDevice.13=false
+    B:metalDevice.14=false
+    B:metalDevice.15=false
+    B:metalDevice.2=false
+    B:metalDevice.3=false
+    B:metalDevice.4=false
+    B:metalDevice.5=false
+    B:metalDevice.6=false
+    B:metalDevice.7=false
+    B:metalDevice.8=false
+    B:metalDevice.9=false
+    B:metalDevice2=false
+    B:metalDevice2.10=false
+    B:metalDevice2.11=false
+    B:metalDevice2.2=false
+    B:metalDevice2.3=false
+    B:metalDevice2.4=false
+    B:metalDevice2.5=false
+    B:metalDevice2.6=false
+    B:metalDevice2.7=false
+    B:metalDevice2.8=false
+    B:metalDevice2.9=false
+    B:metalMultiblock=false
+    B:metalMultiblock.2=false
+    B:metalMultiblock.3=false
+    B:ore=true
+    B:ore.1=true
+    B:ore.2=true
+    B:ore.3=true
+    B:ore.4=true
+    B:stoneDecoration=true
+    B:stoneDecoration.1=true
+    B:stoneDecoration.2=true
+    B:stoneDecoration.3=true
+    B:stoneDecoration.4=true
+    B:stoneDecoration.5=true
+    B:stoneDecoration.6=true
+    B:stoneDevice.4=false
+    B:stoneSlab=false
+    B:stoneSlab.1=false
+    B:stoneSlab.2=false
+    B:storage=true
+    B:storage.1=true
+    B:storage.10=true
+    B:storage.2=true
+    B:storage.3=true
+    B:storage.4=true
+    B:storage.5=true
+    B:storage.6=true
+    B:storage.7=true
+    B:storage.8=true
+    B:storage.9=true
+    B:storageSlab=false
+    B:storageSlab.1=false
+    B:storageSlab.2=false
+    B:storageSlab.3=false
+    B:storageSlab.4=false
+    B:storageSlab.5=false
+    B:storageSlab.6=false
+    B:storageSlab.7=false
+    B:treatedWood=true
+    B:treatedWood.1=true
+    B:treatedWood.2=true
+    B:woodenDecoration.1=false
+    B:woodenDecoration.2=false
+    B:woodenDecoration.4=false
+    B:woodenDecoration.5=false
+    B:woodenDecoration.6=false
+    B:woodenDevice=false
+    B:woodenDevice.1=false
+    B:woodenDevice.2=false
+    B:woodenDevice.3=false
+    B:woodenDevice.4=false
+    B:woodenDevice.5=false
+    B:woodenDevice.6=false
+    B:woodenStairs=false
+    B:woodenStairs1=false
+    B:woodenStairs2=false
 }
 
 
@@ -1859,6 +1867,22 @@ ironchest {
     B:BlockIronChest.5=false
     B:BlockIronChest.6=false
     B:BlockIronChest.7=false
+}
+
+
+irontank {
+    B:copperTank=false
+    B:diamondTank=false
+    B:goldTank=false
+    B:ironTank=false
+    B:obsidianTank=false
+    B:silverTank=false
+}
+
+
+logisticspipes {
+    B:logisticsPipeBlock=false
+    B:logisticsSolidBlock=false
 }
 
 
@@ -2190,51 +2214,9 @@ minefactoryreloaded {
 }
 
 
-powerconverters3 {
-    B:powerconverterscommon=false
-    B:powerconvertersconduit=false
-    B:powerconvertersic2=false
-    B:powerconvertersrf=false
-    B:powerconverterssteam=false
-}
-
-
 powersuits {
     B:tileluxCapacitor=false
     B:tiletinkerTable=false
-}
-
-
-projecte {
-    B:alchemicalchest=false
-    B:collectormk1=false
-    B:collectormk2=false
-    B:collectormk3=false
-    B:condensermk1=false
-    B:condensermk2=false
-    B:dmfurnace=false
-    B:dmfurnacelit=false
-    B:dmpedestal=false
-    B:fuelblock=true
-    B:fuelblock.1=true
-    B:fuelblock.2=true
-    B:interdictiontorch=false
-    B:matterblock=true
-    B:matterblock.1=true
-    B:novacataclysm=true
-    B:novacatalyst=true
-    B:relaymk1=false
-    B:relaymk2=false
-    B:relaymk3=false
-    B:rmfurnace=false
-    B:rmfurnacelit=false
-    B:transmutationtable=false
-}
-
-
-props {
-    B:blockFake=false
-    B:blockProps=false
 }
 
 
@@ -2383,8 +2365,6 @@ railcraft {
     B:machinegamma.3=false
     B:machinegamma.4=false
     B:machinegamma.5=false
-    B:machinegamma.6=false
-    B:machinegamma.7=false
     B:machinegamma.8=false
     B:machinegamma.9=false
     B:ore=true
