--- a/server/config/Waila.cfg
+++ b/server/config/Waila.cfg
@@ -31,8 +31,8 @@ modules {
     B:bc.tankamount=true
     B:bc.tanktype=true
     B:facades.hidden=true
-    B:ic2.outputeu=true
-    B:ic2.storage=true
+    B:general.showcrop=true
+    B:general.showhp=true
     B:railcraft.fluidamount=true
     B:thermalexpansion.cache=true
     B:thermalexpansion.energycell=true
@@ -92,8 +92,8 @@ server_forcing {
     B:bc.tankamount=false
     B:bc.tanktype=false
     B:facades.hidden=false
-    B:ic2.outputeu=false
-    B:ic2.storage=false
+    B:general.showcrop=false
+    B:general.showhp=false
     B:railcraft.fluidamount=false
     B:thermalexpansion.cache=false
     B:thermalexpansion.energycell=false
