--- a/server/config/cofh/thermalexpansion/florbs.cfg
+++ b/server/config/cofh/thermalexpansion/florbs.cfg
@@ -25,17 +25,6 @@ Whitelist {
     B:glass=true
     B:glowstone=true
     B:hootch=true
-    B:ic2biogas=true
-    B:ic2biomass=true
-    B:ic2constructionfoam=true
-    B:ic2coolant=true
-    B:ic2distilledwater=true
-    B:ic2hotcoolant=true
-    B:ic2hotwater=true
-    B:ic2pahoehoelava=true
-    B:ic2steam=true
-    B:ic2superheatedsteam=true
-    B:ic2uumatter=true
     B:ice=true
     B:juice=true
     B:lava=true
@@ -59,6 +48,7 @@ Whitelist {
     B:short.mead=true
     B:sludge=true
     B:steam=true
+    B:syngas=true
     B:water=true
     B:yellorium=true
 }
