--- a/server/config/cofh/thermalfoundation/lexicon-whitelist.cfg
+++ b/server/config/cofh/thermalfoundation/lexicon-whitelist.cfg
@@ -3,6 +3,7 @@ blockAluminium
 blockAluminum
 blockAluminumBrass
 blockAmordrine
+blockAndesite
 blockAngmallen
 blockApatite
 blockArdite
@@ -13,23 +14,30 @@ blockBlutonium
 blockBrass
 blockBronze
 blockCarmot
+blockCarpet
 blockCelenegil
 blockCeruclase
 blockCoal
 blockCobalt
 blockConductiveIron
+blockConstantan
 blockCopper
+blockCupronickel
 blockCyanite
 blockDamascusSteel
 blockDarkSteel
 blockDeepIron
 blockDiamond
+blockDiorite
 blockElectricalSteel
 blockElectrum
 blockEmerald
 blockEnderium
+blockEndstone
 blockEnergeticAlloy
+blockFuelCoke
 blockGold
+blockGranite
 blockGraphite
 blockHaderoth
 blockHepatizon
@@ -48,6 +56,7 @@ blockLudicrite
 blockLumium
 blockManganese
 blockManyullyn
+blockMarble
 blockMeat
 blockMeatRaw
 blockMidasium
@@ -58,6 +67,7 @@ blockObsidian
 blockOrichalcum
 blockOsmium
 blockOureclase
+blockPackedIce
 blockPhasedGold
 blockPhasedIron
 blockPlastic
@@ -82,11 +92,27 @@ blockStainedHardenedClay
 blockSteel
 blockTartarite
 blockTin
-blockUranium
 blockVibrantAlloy
 blockVulcanite
 blockVyroxeres
+blockWaterstone
 blockWool
+blockWoolBlack
+blockWoolBlue
+blockWoolBrown
+blockWoolCyan
+blockWoolGray
+blockWoolGreen
+blockWoolLightBlue
+blockWoolLightGray
+blockWoolLime
+blockWoolMagenta
+blockWoolOrange
+blockWoolPink
+blockWoolPurple
+blockWoolRed
+blockWoolWhite
+blockWoolYellow
 blockYellorium
 blockZinc
 dustAdamantine
@@ -96,9 +122,9 @@ dustAluminum
 dustAluminumBrass
 dustAmordrine
 dustAngmallen
+dustApatite
 dustArdite
 dustAsh
-dustAshes
 dustAstral Silver
 dustAstralSilver
 dustAtlarus
@@ -114,16 +140,19 @@ dustCelenegil
 dustCertusQuartz
 dustCeruclase
 dustCharcoal
-dustClay
 dustCoal
 dustCobalt
+dustCoke
+dustConstantan
 dustCopper
 dustCryotheum
+dustCupronickel
 dustCyanite
 dustDamascusSteel
 dustDeepIron
 dustDiamond
 dustElectrum
+dustEmerald
 dustEnder
 dustEnderPearl
 dustEnderium
@@ -132,9 +161,9 @@ dustGlowstone
 dustGold
 dustGraphite
 dustGunpowder
+dustHOPGraphite
 dustHaderoth
 dustHepatizon
-dustHydratedCoal
 dustIgnatius
 dustInfuscolium
 dustInolashite
@@ -144,7 +173,6 @@ dustKalendrite
 dustLapis
 dustLead
 dustLemurite
-dustLithium
 dustLudicrite
 dustLumium
 dustMagnesium
@@ -163,8 +191,14 @@ dustPetrotheum
 dustPlastic
 dustPlatinum
 dustPlutonium
+dustPoorCopper
+dustPoorGold
+dustPoorIron
+dustPoorLead
+dustPoorTin
 dustPrometheum
 dustPyrotheum
+dustQuartz
 dustQuicksilver
 dustRedstone
 dustRubracium
@@ -175,24 +209,11 @@ dustSanguinite
 dustShadowIron
 dustShadowSteel
 dustSignalum
-dustSiliconDioxide
 dustSilver
 dustSteel
-dustStone
 dustSulfur
 dustTartarite
 dustTin
-dustTinyBronze
-dustTinyCopper
-dustTinyGold
-dustTinyIron
-dustTinyLapis
-dustTinyLead
-dustTinyLithium
-dustTinyObsidian
-dustTinySilver
-dustTinySulfur
-dustTinyTin
 dustTitanium
 dustTungsten
 dustUranium
@@ -200,18 +221,25 @@ dustVulcanite
 dustVyroxeres
 dustWheat
 dustWood
+dustYellorite
 dustYellorium
 dustZinc
 ingotAdamantine
+ingotAerotheum
 ingotAluminium
 ingotAluminum
 ingotAluminumBrass
 ingotAmordrine
 ingotAngmallen
+ingotApatite
 ingotArdite
+ingotAsh
 ingotAstral Silver
 ingotAtlarus
+ingotBasalz
 ingotBlackSteel
+ingotBlitz
+ingotBlizz
 ingotBlutonium
 ingotBrass
 ingotBrick
@@ -219,22 +247,37 @@ ingotBrickNether
 ingotBronze
 ingotCarmot
 ingotCelenegil
+ingotCertusQuartz
 ingotCeruclase
+ingotCharcoal
+ingotCoal
 ingotCobalt
+ingotCoke
 ingotConductiveIron
+ingotConstantan
 ingotCopper
+ingotCryotheum
+ingotCupronickel
 ingotCyanite
 ingotDamascusSteel
 ingotDarkSteel
 ingotDeepIron
+ingotDiamond
 ingotElectricalSteel
 ingotElectrum
 ingotElectrumFlux
+ingotEmerald
+ingotEnderPearl
 ingotEnderium
 ingotEnderiumBase
 ingotEnergeticAlloy
+ingotFirestone
+ingotFluix
+ingotGlowstone
 ingotGold
 ingotGraphite
+ingotGunpowder
+ingotHOPGraphite
 ingotHaderoth
 ingotHepatizon
 ingotIgnatius
@@ -243,6 +286,7 @@ ingotInolashite
 ingotInvar
 ingotIron
 ingotKalendrite
+ingotLapis
 ingotLead
 ingotLemurite
 ingotLudicrite
@@ -254,20 +298,33 @@ ingotMeatRaw
 ingotMidasium
 ingotMithril
 ingotNaturalAluminum
+ingotNetherQuartz
 ingotNickel
+ingotObsidian
 ingotOrichalcum
 ingotOsmium
 ingotOureclase
+ingotPetrotheum
 ingotPhasedGold
 ingotPhasedIron
+ingotPlastic
 ingotPlatinum
 ingotPlutonium
+ingotPoorCopper
+ingotPoorGold
+ingotPoorIron
+ingotPoorLead
+ingotPoorTin
 ingotPrometheum
 ingotPulsatingIron
+ingotPyrotheum
+ingotQuartz
 ingotQuicksilver
+ingotRedstone
 ingotRedstoneAlloy
 ingotRefinedIron
 ingotRubracium
+ingotSaltpeter
 ingotSanguinite
 ingotShadowIron
 ingotShadowSteel
@@ -275,16 +332,23 @@ ingotSignalum
 ingotSilver
 ingotSoularium
 ingotSteel
+ingotSulfur
 ingotTartarite
 ingotTin
 ingotUranium
 ingotVibrantAlloy
 ingotVulcanite
 ingotVyroxeres
+ingotWheat
+ingotWood
+ingotYellorite
 ingotYellorium
 ingotZinc
+nuggetAluminum
 nuggetBronze
+nuggetConstantan
 nuggetCopper
+nuggetCupronickel
 nuggetElectrum
 nuggetEnderium
 nuggetGold
