--- a/server/config/forestry/backpacks.cfg
+++ b/server/config/forestry/backpacks.cfg
@@ -47,23 +47,9 @@ backpacks {
 
         # Add ore dictionary names for the miner's backpack here in the format 'oreDictName'.
         S:ore.dict <
-            crushedCopper
-            crushedGold
-            crushedIron
-            crushedLead
-            crushedPurifiedCopper
-            crushedPurifiedGold
-            crushedPurifiedIron
-            crushedPurifiedLead
-            crushedPurifiedSilver
-            crushedPurifiedTin
-            crushedPurifiedUranium
-            crushedSilver
-            crushedTin
-            crushedUranium
             dustAerotheum
+            dustAluminum
             dustAsh
-            dustAshes
             dustBasalz
             dustBlitz
             dustBlizz
@@ -71,12 +57,13 @@ backpacks {
             dustBronze
             dustCertusQuartz
             dustCharcoal
-            dustClay
             dustCoal
+            dustCoke
+            dustConstantan
             dustCopper
             dustCryotheum
+            dustCupronickel
             dustCyanite
-            dustDiamond
             dustElectrum
             dustEnder
             dustEnderPearl
@@ -86,12 +73,10 @@ backpacks {
             dustGold
             dustGraphite
             dustGunpowder
-            dustHydratedCoal
+            dustHOPGraphite
             dustInvar
             dustIron
-            dustLapis
             dustLead
-            dustLithium
             dustLudicrite
             dustLumium
             dustMithril
@@ -103,25 +88,13 @@ backpacks {
             dustPlatinum
             dustPlutonium
             dustPyrotheum
+            dustQuartz
             dustRedstone
             dustSaltpeter
             dustSignalum
-            dustSiliconDioxide
             dustSilver
-            dustStone
             dustSulfur
             dustTin
-            dustTinyBronze
-            dustTinyCopper
-            dustTinyGold
-            dustTinyIron
-            dustTinyLapis
-            dustTinyLead
-            dustTinyLithium
-            dustTinyObsidian
-            dustTinySilver
-            dustTinySulfur
-            dustTinyTin
             dustUranium
             dustWheat
             dustWood
@@ -131,14 +104,15 @@ backpacks {
             gemEmerald
             gemLapis
             gemQuartz
-            ingotAluminium
+            ingotAluminum
             ingotBlutonium
-            ingotBrass
             ingotBrick
             ingotBrickNether
             ingotBronze
             ingotConductiveIron
+            ingotConstantan
             ingotCopper
+            ingotCupronickel
             ingotCyanite
             ingotDarkSteel
             ingotElectricalSteel
@@ -148,6 +122,7 @@ backpacks {
             ingotEnergeticAlloy
             ingotGold
             ingotGraphite
+            ingotHOPGraphite
             ingotInvar
             ingotIron
             ingotLead
@@ -172,8 +147,11 @@ backpacks {
             ingotUranium
             ingotVibrantAlloy
             ingotYellorium
+            nuggetAluminum
             nuggetBronze
+            nuggetConstantan
             nuggetCopper
+            nuggetCupronickel
             nuggetElectrum
             nuggetEnderium
             nuggetGold
@@ -192,6 +170,7 @@ backpacks {
             nuggetSteel
             nuggetTin
             nuggetVibrantAlloy
+            oreAluminum
             oreApatite
             oreCertusQuartz
             oreCoal
@@ -220,6 +199,7 @@ backpacks {
             oreUranium
             oreYellorite
             oreYellorium
+            oreZinc
          >
     }
 
@@ -231,6 +211,11 @@ backpacks {
             Forestry:kitShovel:0
             Railcraft:cube:6
             Railcraft:cube:7
+            chisel:andesite:0
+            chisel:diorite:0
+            chisel:granite:0
+            chisel:limestone:0
+            chisel:marble:0
             minecraft:clay_ball:0
             minecraft:dirt
             minecraft:flint:0
@@ -245,16 +230,15 @@ backpacks {
             cobblestone
             sand
             stone
+            stoneAndesite
+            stoneDiorite
+            stoneGranite
          >
     }
 
     forester {
         # Add itemStacks for the forester's backpack here in the format 'modid:name:meta'. For wildcard metadata the format is 'modid:name'.
         S:item.stacks <
-            IC2:blockRubLeaves:0
-            IC2:blockRubSapling:0
-            IC2:itemHarz:0
-            IC2:itemRubber:0
             minecraft:brown_mushroom:0
             minecraft:cactus:0
             minecraft:golden_apple:0
@@ -284,6 +268,7 @@ backpacks {
             cropWheat
             logWood
             saplingTree
+            seedIndustrialHemp
             stickWood
             treeLeaves
             treeSapling
@@ -520,22 +505,30 @@ backpacks {
 
         # Add ore dictionary names for the builder's backpack here in the format 'oreDictName'.
         S:ore.dict <
+            blockAluminum
+            blockAndesite
             blockApatite
             blockBlutonium
             blockBronze
+            blockCarpet
             blockCloth
             blockClothRock
             blockCoal
             blockConductiveIron
+            blockConstantan
             blockCopper
+            blockCupronickel
             blockCyanite
             blockDarkSteel
             blockDiamond
+            blockDiorite
             blockElectricalSteel
             blockElectrum
             blockEmerald
             blockEnderium
+            blockEndstone
             blockEnergeticAlloy
+            blockFuelCoke
             blockGlass
             blockGlassBlack
             blockGlassBlue
@@ -557,6 +550,7 @@ backpacks {
             blockGlassWhite
             blockGlassYellow
             blockGold
+            blockGranite
             blockGraphite
             blockIce
             blockInvar
@@ -565,11 +559,13 @@ backpacks {
             blockLead
             blockLudicrite
             blockLumium
+            blockMarble
             blockMeat
             blockMeatRaw
             blockMithril
             blockNickel
             blockObsidian
+            blockPackedIce
             blockPhasedGold
             blockPhasedIron
             blockPlastic
@@ -587,9 +583,25 @@ backpacks {
             blockStainedHardenedClay
             blockSteel
             blockTin
-            blockUranium
             blockVibrantAlloy
+            blockWaterstone
             blockWool
+            blockWoolBlack
+            blockWoolBlue
+            blockWoolBrown
+            blockWoolCyan
+            blockWoolGray
+            blockWoolGreen
+            blockWoolLightBlue
+            blockWoolLightGray
+            blockWoolLime
+            blockWoolMagenta
+            blockWoolOrange
+            blockWoolPink
+            blockWoolPurple
+            blockWoolRed
+            blockWoolWhite
+            blockWoolYellow
             blockYellorium
             fenceWood
             glass
@@ -619,6 +631,54 @@ backpacks {
             slabWoodJungle
             slabWoodOak
             slabWoodSpruce
+            stainedClayBlack
+            stainedClayBlue
+            stainedClayBrown
+            stainedClayCyan
+            stainedClayGray
+            stainedClayGreen
+            stainedClayLightBlue
+            stainedClayLightGray
+            stainedClayLime
+            stainedClayMagenta
+            stainedClayOrange
+            stainedClayPink
+            stainedClayPurple
+            stainedClayRed
+            stainedClayWhite
+            stainedClayYellow
+            stainedGlassBlack
+            stainedGlassBlue
+            stainedGlassBrown
+            stainedGlassCyan
+            stainedGlassGray
+            stainedGlassGreen
+            stainedGlassLightBlue
+            stainedGlassLightGray
+            stainedGlassLime
+            stainedGlassMagenta
+            stainedGlassOrange
+            stainedGlassPaneBlack
+            stainedGlassPaneBlue
+            stainedGlassPaneBrown
+            stainedGlassPaneCyan
+            stainedGlassPaneGray
+            stainedGlassPaneGreen
+            stainedGlassPaneLightBlue
+            stainedGlassPaneLightGray
+            stainedGlassPaneLime
+            stainedGlassPaneMagenta
+            stainedGlassPaneOrange
+            stainedGlassPanePink
+            stainedGlassPanePurple
+            stainedGlassPaneRed
+            stainedGlassPaneWhite
+            stainedGlassPaneYellow
+            stainedGlassPink
+            stainedGlassPurple
+            stainedGlassRed
+            stainedGlassWhite
+            stainedGlassYellow
             stairWood
             stone
          >
