--- a/server/config/AppliedEnergistics2/Facades.cfg
+++ b/server/config/AppliedEnergistics2/Facades.cfg
@@ -2214,6 +2214,46 @@ minefactoryreloaded {
 }
 
 
+openmodularturrets {
+    B:baseTierFourBlock=false
+    B:baseTierOneBlock=false
+    B:baseTierThreeBlock=false
+    B:baseTierTwoBlock=false
+    B:baseTierWood=false
+    B:disposeItemTurret=false
+    B:expanderInvTierFive=false
+    B:expanderInvTierFour=false
+    B:expanderInvTierOne=false
+    B:expanderInvTierThree=false
+    B:expanderInvTierTwo=false
+    B:expanderPowerTierFive=false
+    B:expanderPowerTierFour=false
+    B:expanderPowerTierOne=false
+    B:expanderPowerTierThree=false
+    B:expanderPowerTierTwo=false
+    B:fenceTierFive=false
+    B:fenceTierFour=false
+    B:fenceTierOne=false
+    B:fenceTierThree=false
+    B:fenceTierTwo=false
+    B:grenadeTurret=false
+    B:hardWallTierFive=true
+    B:hardWallTierFour=true
+    B:hardWallTierOne=true
+    B:hardWallTierThree=true
+    B:hardWallTierTwo=true
+    B:incendiaryTurret=false
+    B:laserTurret=false
+    B:leverBlock=false
+    B:machineGunTurret=false
+    B:potatoCannonTurret=false
+    B:railGunTurret=false
+    B:relativisticTurret=false
+    B:rocketTurret=false
+    B:teleporterTurret=false
+}
+
+
 powersuits {
     B:tileluxCapacitor=false
     B:tiletinkerTable=false
@@ -2561,6 +2601,138 @@ redlogic {
     B:redlogicwire.7=false
     B:redlogicwire.8=false
     B:redlogicwire.9=false
+}
+
+
+rftools {
+    B:activityProbeBlock=true
+    B:biomeAbsorberBlock=false
+    B:blockProtectorBlock=false
+    B:builderBlock=false
+    B:counterBlock=false
+    B:crafterBlock1=false
+    B:crafterBlock2=false
+    B:crafterBlock3=false
+    B:creativeDimensionBuilderBlock=false
+    B:destinationAnalyzerBlock=true
+    B:dialingDeviceBlock=false
+    B:dimensionBuilderBlock=false
+    B:dimensionEditorBlock=false
+    B:dimensionEnscriberBlock=false
+    B:dimensionMonitorBlock=false
+    B:dimensionalBlankBlock=true
+    B:dimensionalBlock=true
+    B:dimensionalCross2Block=true
+    B:dimensionalCrossBlock=true
+    B:dimensionalPattern1Block=true
+    B:dimensionalPattern2Block=true
+    B:dimensionalShardBlock=true
+    B:dimensionalSmallBlocks=true
+    B:dimletFilterBlock=false
+    B:dimletResearcherBlock=false
+    B:dimletScramblerBlock=false
+    B:dimletWorkbenchBlock=false
+    B:enderMonitorBlock=false
+    B:endergenicBlock=false
+    B:energyExtractorBlock=false
+    B:environmentalControllerBlock=false
+    B:invisibleShieldBlock=false
+    B:itemFilterBlock=false
+    B:liquidAbsorberBlock=false
+    B:liquidMonitorBlock=false
+    B:machineBase=true
+    B:machineFrame=true
+    B:machineInfuserBlock=false
+    B:materialAbsorberBlock=false
+    B:matterBeamerBlock=false
+    B:matterBoosterBlock=true
+    B:matterReceiverBlock=false
+    B:matterTransmitterBlock=false
+    B:modularStorageBlock=false
+    B:noTickInvisibleShieldBlock=false
+    B:noTickolidShieldBlock=false
+    B:pearlInjectorBlock=false
+    B:proxyBlock=false
+    B:redstoneReceiverBlock=false
+    B:redstoneTransmitterBlock=false
+    B:relayBlock=false
+    B:remoteStorageBlock=false
+    B:rfMonitorBlock=false
+    B:screenBlock=false
+    B:screenControllerBlock=false
+    B:screenHitBlock=false
+    B:securityManagerBlock=false
+    B:sequencerBlock=false
+    B:shieldBlock=false
+    B:shieldBlock2=false
+    B:shieldBlock3=false
+    B:shieldBlock4=false
+    B:shieldTemplateBlock=false
+    B:shieldTemplateBlock.1=false
+    B:shieldTemplateBlock.2=false
+    B:shieldTemplateBlock.3=false
+    B:simpleDialerBlock=false
+    B:solidShieldBlock=false
+    B:spaceChamberBlock=false
+    B:spaceChamberControllerBlock=false
+    B:spaceProjectorBlock=false
+    B:spawnerBlock=false
+    B:storageScannerBlock=false
+    B:supportBlock=false
+    B:timeAbsorberBlock=false
+    B:timerBlock=false
+    B:volcanicBlock=false
+    B:volcanicCoreBlock=false
+}
+
+
+storagedrawers {
+    B:compDrawers=false
+    B:controller=false
+    B:controllerSlave=false
+    B:framingTable=false
+    B:fullCustom1=false
+    B:fullCustom2=false
+    B:fullCustom4=false
+    B:fullDrawers1=false
+    B:fullDrawers1.1=false
+    B:fullDrawers1.2=false
+    B:fullDrawers1.3=false
+    B:fullDrawers1.4=false
+    B:fullDrawers1.5=false
+    B:fullDrawers2=false
+    B:fullDrawers2.1=false
+    B:fullDrawers2.2=false
+    B:fullDrawers2.3=false
+    B:fullDrawers2.4=false
+    B:fullDrawers2.5=false
+    B:fullDrawers4=false
+    B:fullDrawers4.1=false
+    B:fullDrawers4.2=false
+    B:fullDrawers4.3=false
+    B:fullDrawers4.4=false
+    B:fullDrawers4.5=false
+    B:halfCustom2=false
+    B:halfCustom4=false
+    B:halfDrawers2=false
+    B:halfDrawers2.1=false
+    B:halfDrawers2.2=false
+    B:halfDrawers2.3=false
+    B:halfDrawers2.4=false
+    B:halfDrawers2.5=false
+    B:halfDrawers4=false
+    B:halfDrawers4.1=false
+    B:halfDrawers4.2=false
+    B:halfDrawers4.3=false
+    B:halfDrawers4.4=false
+    B:halfDrawers4.5=false
+    B:trim=true
+    B:trim.1=true
+    B:trim.2=true
+    B:trim.3=true
+    B:trim.4=true
+    B:trim.5=true
+    B:trimCustom=false
 }
 
 
